[package]
name = "russ"
version = "0.1.0"
edition = "2024"

[dependencies]
atom_syndication = {version = "0.12.7", features = ["serde"]}
chrono = {version = "0.4.42", features = ["serde"]}
crossterm = "0.29.0"
html2text = "0.15.5"
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
quick-xml = "0.38.3"
ratatui = { version = "0.29.0", features = ["serde", "unstable-rendered-line-info"]}
ratatui-image = "8.0.2"
reqwest = "0.12.23"
rss = { version = "2.0.12", features = ["validation"]}
serde = "1.0.228"
serde_json = "1.0.145"
terminal = "0.2.1"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"

[lints.rust]
unused_imports = "allow"
